--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -66,11 +66,11 @@
                     <div id="Aussen_Innen_ProfilDopel">
 
                     <div id="AussenProfilDopel">
-                       <input type="number" placeholder="Aussen" id="aus" step="0.01" name="aussen" />
+                            <input type="number" class="form-control" placeholder="Aussen" id="aus" step="0.01" name="aussen" />
                         </div>
 
                         <div id="InnenProfilDopel" >
-                            <input type="number" placeholder="innen" id="inter" step="0.01" name="innen" />
+                            <input type="number" class="form-control" placeholder="innen" id="inter" step="0.01" name="innen" />
                         </div>
                     </div> 
                     <div id="productOptions">
@@ -86,7 +86,6 @@
             <button id="createBlockBtn" class="btn btn-success">Add Options</button>
             <button id="addInputBtn" class="btn btn-success">+</button>
             <button id="RemoveInputBtn" class="btn btn-danger">-</button>
-            @* <div id="container"></div> *@
         </div>
 
     </div>
@@ -268,12 +267,14 @@
                 let d = document.createElement('input');
                 d.setAttribute('name', 'aussen');
                 d.setAttribute('placeholder', 'aussen');
+                d.setAttribute('class', 'form-control');
                 d.id = 'aus';
 
                 let x = document.createElement('input');
                 x.setAttribute('name', 'innen');
                 x.setAttribute('placeholder', 'innen');
-                x.id = 'inter'
+                x.id = 'inter';
+                x.setAttribute('class', 'form-control');
                 docAussen.append(d);
                 docInnen.append(x);
 
