--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -369,7 +369,7 @@ a {
     margin-top: 5px;
 }
 #schlussel2 {
-    margin-left: 520px;
+    margin-left: 510px;
     margin-top: 5px;
 }
 #TexInputKey {
@@ -413,7 +413,7 @@ a {
     display: flex;
 }
 #schlussel3 {
-    margin-left: 800px;
+    margin-left: 780px;
     margin-top: 5px;
 }
 #ItemTur {
@@ -520,6 +520,7 @@ summary {
 }
 .container {
     background-color: #e4e4e4;
+    padding: 20px;
 }
 #FinisherPage{
     background-color:#e4e4e4;
